# log-it

./: CMakeLists.txt  todo.txt
source/: Log.cpp  Log.cpp.autosave  Log.h  Log.h.autosave  SecondFileClass.cpp  SecondFileClass.h  main.cpp
source/InstagramDownloader/: Log.cpp  Log.h
source/Log/: Log.cpp  Log.h
source/logQt/: Log.cpp  Log.h
source/trying_using_object/: Log.cpp  Log.h
